--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -5,3 +5,4 @@ encoding//src/main/java/com/shinhan/model/EmpDAO.java=UTF-8
 encoding//src/main/java/com/shinhan/model/EmpService.java=UTF-8
 encoding//src/main/java/com/shinhan/util/DateUtil.java=UTF-8
 encoding//src/main/java/com/shinhan/util/OracleUtil.java=UTF-8
+encoding//src/main/webapp/WEB-INF/views/dept/deptupdate.jsp=UTF-8
