--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/java/com/shinhan/education/LogAdvice.java=UTF-8
 encoding//src/main/java/com/shinhan/model/CompanyDAO.java=UTF-8
 encoding//src/main/java/com/shinhan/model/CompanyService.java=UTF-8
 encoding//src/main/java/com/shinhan/model/EmpDAO.java=UTF-8
